@@ -264,6 +264,10 @@ Trunk (unreleased changes)
     HDFS-705. Create an adapter to access some of package-private methods of
     DataNode from tests (cos)
 
+    HDFS-710. Added actions with constraints to the pipeline fault injection
+    tests and changed SleepAction to support uniform random sleeping over an
+    interval.  (szetszwo)
+
   BUG FIXES
 
     HDFS-76. Better error message to users when commands fail because of 
